clusters/talos-robbinsdale/apps/home/app/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home
spec:
  selector:
    app: homeassistant
  ports:
  - name: homeassistant-web
    port: 8123
    targetPort: 8123
  - name: homekit-udp
    port: 5353
    targetPort: 5353
  - name: homekit-tcp
    port: 21084
    targetPort: 21084
  type: LoadBalancer
  loadBalancerIP: 10.50.10.13
