clusters/talos-robbinsdale/apps/home/app/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  namespace: home
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "homeassistant.rajsingh.info"
    - "homeassistant.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homeassistant
          port: 8123
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
